Agent refactoring. Moving to Gradle Java toolchains.